envoy/envo.yaml
admin:
  address:
    socket_address: { address: 0.0.0.0, port_value: 9901 }

static_resources:
  listeners:
  - name: listener_0
    address:
      socket_address: { address: 0.0.0.0, port_value: 10000 } # 1. Lắng nghe cổng 10000
    filter_chains:
    - filters:
      - name: envoy.filters.network.http_connection_manager
        typed_config:
          "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
          stat_prefix: ingress_http
          http_filters:
          - name: envoy.filters.http.router
          route_config:
            name: local_route
            virtual_hosts:
            - name: local_service
              domains: ["*"]
              routes:
              - match: { prefix: "/" }
                route:
                  cluster: express_api_service # 3. Chuyển đến cluster
              # Thêm cấu hình CORS để trình duyệt không chặn request
              cors:
                allow_origin_string_match:
                  - prefix: "*"
                allow_methods: GET, PUT, POST, DELETE, OPTIONS
                allow_headers: "*"

  clusters:
  - name: express_api_service # 2. Định nghĩa cluster
    connect_timeout: 0.25s
    type: LOGICAL_DNS
    load_assignment:
      cluster_name: express_api_service
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              # 'api' là tên service trong docker-compose
              socket_address: { address: api, port_value: 3001 }
